--- a/JSTodoList/index.html
+++ b/JSTodoList/index.html
@@ -59,6 +59,10 @@
           Search
         </button>
       </form>
+      <!-- Botón para cambiar el color de fondo -->
+      <button class="btn btn-outline-info ml-3" type="button" id="toggle-bg">
+        Cambiar fondo
+      </button>
     </div>
   </nav>
 
@@ -196,7 +200,6 @@
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <!-- JS Code -->
-  <script src="./js/index.js" type = "module" ></script>
+  <script src="./js/index.js" type="module"></script>
 </body>
 </html>
-
