--- a/JSTodoList/index.html
+++ b/JSTodoList/index.html
@@ -138,29 +138,40 @@
       <div class="alert alert-danger d-none" role="alert" id="alert">
         A simple danger alert—check it out!
       </div>
-
       <div>
         <form> 
           <div class="row">
-            <div class="col-sm-3 d-sm-flex align-items-center">
-              <label class="m-sm-0">Title</label>
+            <!-- Título -->
+            <div class="col-sm-3 d-flex align-items-center mb-3 mb-sm-0">
+              <label for="title" class="m-0 mr-2">Title</label>
               <input
                 type="text"
                 id="title"
-                class="form-control ml-sm-2"
+                class="form-control"
                 placeholder="Learn JS"
               >
             </div>
-            <div class="px-sm-2 col-sm-7 d-sm-flex align-items-center mt-2 mt-sm-0">
-              <label class="m-sm-0">Description</label>
+            <!-- Descripción -->
+            <div class="col-sm-4 d-flex align-items-center mb-3 mb-sm-0">
+              <label for="description" class="m-0 mr-2">Description</label>
               <input
                 type="text"
                 id="description"
-                class="form-control ml-sm-2"
+                class="form-control"
                 placeholder="Watch JS Tutorials"
               >
             </div>
-            <div class="col-sm-2 d-sm-flex justify-content-end mt-4 mt-sm-0">
+            <!-- Fecha de vencimiento -->
+            <div class="col-sm-3 d-flex align-items-center mb-3 mb-sm-0">
+              <label for="due-date" class="m-0 mr-2">Fecha de vencimiento</label>
+              <input 
+                type="date" 
+                id="due-date" 
+                class="form-control"
+              >
+            </div>
+            <!-- Botón Agregar -->
+            <div class="col-sm-2 d-flex align-items-center">
               <button type="button" class="btn btn-info btn-block" id="add">
                 Add
               </button>
