Fecha de vencimiento.

--- a/JSTodoList/index.html
+++ b/JSTodoList/index.html
@@ -110,6 +110,13 @@
 
               </textarea>
             </div>
+
+            <!-- Aquí insertamos el campo de fecha de vencimiento -->
+            <div class="form-group">
+              <label>Fecha de vencimiento</label>
+              <input type="date" id="modal-due-date" class="form-control">
+            </div>
+            
             <div class="form-group d-inline-flex">
               <label>Completed</label>
               <div class="mt-1 ml-2">
